@@ -1,3 +1,8 @@
+2012-07-30  Ulrich Weigand  <ulrich.weigand@linaro.org>
+
+	* arm-linux-nat.c (arm_linux_hw_breakpoint_initialize): Do not
+	attempt to 4-byte-align HW breakpoint addresses for Thumb.
+
 2012-07-30  Andrew Burgess  <aburgess@broadcom.com>
 
 	* varobj.c (varobj_invalidate_iter): All varobj must be marked as
